--- a/index.html
+++ b/index.html
@@ -1,1 +1,91 @@
-index.html
+<!DOCTYPE html>
+
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">  
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
+    <title>SergeiDemchuk</title>
+</head>
+<header>
+    <div class="container"> 
+    <nav class="nav">
+        <ul class="nav-list">
+          <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+          <li class="nav-item"><a href="#aboutMe" class="nav-link">About Me</a></li>
+          <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+          <li class="nav-item"><a href="#codeExample" class="nav-link">Code Example</a></li>
+          <li class="nav-item"><a href="#experience" class="nav-link">Experience</a></li>
+          <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+          <li class="nav-item"><a href="#english" class="nav-link">English</a></li>
+        </ul>
+      </nav>
+    </div>
+</header>
+
+<main>
+<div class="main-container">
+ <section class="section" id="profile">
+<img src="PhotoCV.jpg" alt="PhotoCV"> 
+<h1 class="section-title">Sergei Demchuk</h1>
+    </section> 
+    <section class="section" id="contacts">
+    <h2 class="section-title">Contacts</h2>
+    <ul class="list">
+    <li class="list-item"><a class="link">Location: Brest, Belarus</a></li>
+    <li class="list-item"><a href="mailto:demchuk90@gmail.com" class="link">Email: demchuk90@gmail.com</a></li>
+    <li class="list-item"><a href="http://github.com/SergeiDemchuk" class="link">GitHub: github.com/SergeiDemchuk</a></li>
+    <li class="list-item"><a class="link">Discord:SergeiDemchuk#9002</a></li> 
+        </ul>
+
+    </section> 
+    <section class="section" id="aboutMe">
+        <h2 class="section-title">About me</h2>
+        I am responsible,disciplined,ready to learn new things.
+    </section> 
+    <section class="section" id="skills">
+        <h2 class="section-title">Skills</h2>
+        <ul class="list">
+            <li class="list-item"><a class="link">Java(basic)</a>
+               <li class="list-item"><a class="link">Salesforce(basic)</a>
+        </ul>
+    </section>
+    <section class="section" id="codeExample">
+     <h2 class="section-title">Code example</h2>
+         <pre>
+            <code>
+public class Test {
+ public static void main(String[] args) {
+    System.out.println("Hello world!");
+    }
+}
+</code>
+</pre>
+</section>
+<section class="section" id="experience">
+<h2 class="section-title">Experience</h2>
+<p>Created a CV<a href="https://sergeidemchuk.github.io/rsschool-cv/" class="link"> SergeiDemchuk</a></p>
+</section>
+    
+<section class="section" id="education">
+<h2 class="section-title">Education</h2>
+<p>Java for beginners. Alishev. YouTube</p>   
+</section>
+<section class="section" id="english">
+<h2 class="section-title">English</h2>
+<p>A2</p>
+</section>
+</div>
+</main>
+<footer class="footer">
+    <div class="container footer-container">
+      <div>© 2022 <a href="https://github.com/SergeiDemchuk" class="github nav-link">SergeiDemchuk</a></div>
+      <a href="https://rs.school/js/" class="rss"></a>
+    </div>
+  </footer>
+</body>
+</html>
